<?xml version="1.0"?>

<package>
  <name>look_at_pose</name>
  <version>0.7.5</version>
  <description>Rotate camera to look at a given pose.</description>
  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>
  <author>Andy Zelenak</author>
  <license>see license.txt</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_srvs</run_depend>
</package>


